--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,18 @@ header{
     border-radius: 4px;
 }
 
+#main-container{
+    display: inline-flex;
+}
+
 .imagenes:hover{
     border: 4px solid rgb(212, 153, 153);
 }
+ @media (max-width: 800px) {
+    header{
+        background-size: contain;
+    }
+    #main-container{
+        flex-direction: column;
+    }
+ }
